RESOLVED FIXED203556
[GTK][WPE] Fix non-unified build after r251691
https://bugs.webkit.org/show_bug.cgi?id=203556
Summary [GTK][WPE] Fix non-unified build after r251691
Adrian Perez
Reported 2019-10-29 01:51:00 PDT
Commit r251691 introduced the following build failure: ../Source/WebCore/bindings/js/ScriptModuleLoader.cpp:218:23: error: use of undeclared identifier 'JSInternalPromise'; did you mean 'JSC::JSInternalPromise'? auto* jsPromise = JSInternalPromise::create(globalObject.vm(), globalObject.internalPromiseStructure()); ^~~~~~~~~~~~~~~~~ JSC::JSInternalPromise DerivedSources/ForwardingHeaders/JavaScriptCore/JSInternalPromise.h:42:7: note: 'JSC::JSInternalPromise' declared here class JSInternalPromise final : public JSPromise { ^ 1 error generated.
Attachments
Patch (1.64 KB, patch)
2019-10-29 02:02 PDT, Adrian Perez
no flags
Adrian Perez
Comment 1 2019-10-29 02:02:00 PDT
WebKit Commit Bot
Comment 2 2019-10-29 07:36:39 PDT
Comment on attachment 382168 [details] Patch Clearing flags on attachment: 382168 Committed r251698: <https://trac.webkit.org/changeset/251698>
WebKit Commit Bot
Comment 3 2019-10-29 07:36:40 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-10-29 07:37:17 PDT
Note You need to log in before you can comment on or make changes to this bug.