[GTK][WPE] Fix non-unified build after r251691 https://bugs.webkit.org/show_bug.cgi?id=203556

Reviewed by Žan Doberšek.

No new tests needed.

* bindings/js/ScriptModuleLoader.cpp:
(WebCore::rejectPromise): Add missing namespace in call to JSC::JSInternalPromise::create().


Canonical link: https://commits.webkit.org/216924@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251698 268f45cc-cd09-0410-ab3c-d52691b4dbfc